# flutter_python_flask

api/: main.py  pyproject.toml
